--- a/navigator/index.html
+++ b/navigator/index.html
@@ -14,7 +14,7 @@
 <meta name="msapplication-navbutton-color" content="#f8f5ec">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
-
+<meta name='referrer' content='no-referrer' />
 
 <meta name="author" content="瞿广" /><meta name="description" content="| 分类 | | | | | | | | | | &amp;mdash; | &amp;mdash; | &amp;mdash; | &amp;mdash; | &amp;mdash; | &amp;mdash; | &amp;mdash; | &amp;mdash; | &amp;mdash; | | 每日必看 | ImportNew | InfoQ | leetcode | juejin| medium | segmentfault | oschina| | | | springcloud | springboot | | | | | | | 每日必看 Fruits Vegetable 每日" /><meta name="keywords" content="java, java语言, java语言笔记, techqu, quguang, 瞿广, 博客, 项目管理, python, 软件架构, 公众号, 小程序" />
 
