--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta name="msapplication-navbutton-color" content="#f8f5ec">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
-
+<meta name='referrer' content='no-referrer' />
 
 <meta name="author" content="瞿广" /><meta name="description" content="从14年参加工作，到现在也有三四年了，业余时间也都有学习，可惜一直感觉工作中能用上的东西很少，学了angular、react、vue、ion" /><meta name="keywords" content="java, java语言, java语言笔记, techqu, quguang, 瞿广, 博客, 项目管理, python, 软件架构, 公众号, 小程序" />
 
