--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="瞿广" /><meta name="description" content="关于工作 从14年参加工作，到现在也有三四年了，业余时间也都有学习，可惜一直感觉工作中能用上的东西很少。 前端、服务端（java,python）" /><meta name="keywords" content="java, 锁, 并发" />
+<meta name="author" content="瞿广" /><meta name="description" content="关于工作 从14年参加工作，到现在也有三四年了，业余时间也都有学习，可惜一直感觉工作中能用上的东西很少。 前端、服务端（java,python）" /><meta name="keywords" content="java, java语言, java语言笔记, techqu, quguang, 瞿广, 博客, 项目管理, python, 软件架构, 公众号, 小程序" />
 
 
 
@@ -56,7 +56,7 @@
 
 
 
-<meta itemprop="keywords" content="java,锁,并发," />
+<meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="关于"/>
 <meta name="twitter:description" content="关于工作 从14年参加工作，到现在也有三四年了，业余时间也都有学习，可惜一直感觉工作中能用上的东西很少。 前端、服务端（java,python）"/>
