--- a/search/index.html
+++ b/search/index.html
@@ -207,9 +207,9 @@
 
 <script>
 const search = instantsearch({
-  appId: '',
-  indexName: '',
-  apiKey: ''
+  appId: 'V7U7QO1TC4',
+  indexName: 'myblog',
+  apiKey: 'ac29b8356bd3b2ceee369bf3894f34e4'
 });
 
 const hitTemplate = function(hit) {
